[metadata]
name = Flask-Pub
version = attr: flask_pub.__version__
url = https://github.com/daxiom/Flask-Pub/
project_urls =
    Documentation = https://Flask-Pub.readthedocs.io/
    Changes = 
    Source Code = https://github.com/daxiom/Flask-Pub/
    Issue Tracker = https://github.com/daxiom/Flask-Pub/issues/
    Chat = 
license = Apache
author = thor wolpert
author_email = thor@daxiom.com
maintainer = thor wolpert
maintainer_email = thor@daxiom.com
description = publish to supported queues
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: Apache
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.9

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    flask_pub
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
ignore =
    # bare except, handled by bugbear B001
    E722
max-line-length = 120
per-file-ignores =
    # __init__ module exports names
    src/flask_pub/__init__.py: F401
